Connect with a MongoDB "sample_flix" table
Fetch the first 20 movies with SSR props

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@types/d3": "^7.4.1",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.4",
     "next": "latest",
+    "next-connect": "^1.0.0",
     "react": "latest",
     "react-admin": "^4.14.5",
     "react-chartjs-2": "^5.2.0",
