--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/pages/api/hello.js",
+    "db.js",
+    "src/pages/api-test.tsx"
+  ],
   "exclude": ["node_modules"]
 }
