Add placeholder modals with tabs for different legal type of tables (acts, facts, duties)
Adjust example API response

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "**/*.tsx",
     "src/pages/api/hello.js",
     "db.js",
-    "src/pages/api-test.tsx"
+    "src/pages/api-test.tsx",
+    "src/components/modal"
   ],
   "exclude": ["node_modules"]
 }
