--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -46,5 +47,10 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
-  }
+  },
+  "description": "Eslint Config for WebApp",
+  "main": "index.js",
+  "repository": "https://github.com/dsp-norm-extractor/webapp.git",
+  "author": "Atanas Yonkov <atanasyonkov1@gmail.com>",
+  "license": "MIT"
 }
