--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.16.1",
     "@types/d3": "^7.4.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
     "dotenv": "^16.3.1",
