--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "react-svg-pan-zoom-loader": "^1.6.1",
     "react-zoom-pan-pinch": "^3.1.0",
     "recharts": "^2.8.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-svg-pan-zoom": "^3.3.6",
+    "@types/uuid": "^9.0.7",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
