--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">20.6.1"
+    "node": ">=20.6.1"
   },
   "engineStrict": true,
   "scripts": {
