--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@mui/styled-engine-sc": "^5.14.11",
     "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.16.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@types/d3": "^7.4.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "chart.js": "^4.4.0",
@@ -31,12 +34,15 @@
     "mongoose": "^8.0.4",
     "next": "latest",
     "next-connect": "^1.0.0",
+    "pdfjs-dist": "^3.4.120",
+    "raw-loader": "^4.0.2",
     "react": "latest",
     "react-admin": "^4.14.5",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "latest",
     "react-hot-toast": "^2.4.1",
     "react-inner-image-zoom": "^3.0.2",
+    "react-pdf-viewer": "^0.1.0",
     "react-spring": "^9.7.3",
     "react-svg-pan-zoom": "^3.12.1",
     "react-svg-pan-zoom-loader": "^1.6.1",
